test/TestPhases/typechecker/invalid/floatMissingType.blc
module floatMissingType

function floatMissingType()
    var a = -129.0
end
